--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 # Project exclude paths
-/.gradle/.idea/application-oauth.properties
+application-oauth.properties
+/.gradle/
+/.idea/
+build/classes/java/main/generated/
+build/classes/java/test/generated_tests/
+build/generated/
+build/tmp/
+src/test/resources/
