--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 # Project exclude paths
-application-oauth.properties
-/.gradle/
-/.idea/
-build/classes/java/main/generated/
-build/classes/java/test/generated_tests/
-build/generated/
-build/tmp/
-src/test/resources/
+.gradle
+.idea
+
+application-real-oauth.properties
+
+build
+out
