--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-# Project exclude paths
+# Created by .ignore support plugin (hsz.mobi)
+
+
 .gradle
 .idea
-
-application-real-oauth.properties
-
+src/main/generated/
+src/main/resources/application-oauth.properties
+src/main/resources/application-real-oauth.properties
 build
 out
