--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ cache:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
+before_install:
+  chmod +x gradlew
 script: "./gradlew clean build"
 
 # CI complete
