.travis && .appspec commit

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,19 @@ deploy:
     skip_cleanup: true
     acl: private
     local_dir: deploy
+    wait-until-deployed: true
+
+  - provider: codedeploy
+    access_key_id:
+    secret_access_key:
+    bucket: mybucket-springboot-build
+    key: freelec-springboot2-webservice.zip
+    bundle_type: zip
+    application: freelec-springboot2-webservice
+    deployment_group: freelec-springboot2-webservice-group
+    region: ap-northeast-2
+    wait-until-deployed: true
+
 
 
 # CI complete
