--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,8 @@ deploy:
     bucket: mybucket-springboot-build
     key: freelec-springboot2-webservice.zip
     bundle_type: zip
-    application: freelec-springboot2-webservice
-    deployment_group: codedeploy-webservice-group
+    application: myservice-codedeploy
+    deployment_group: mycodedeploy
     region: ap-northeast-2
     wait-until-deployed: true
 
