--- a/.travis.yml
+++ b/.travis.yml
@@ -1,53 +1,51 @@
 language: java
 jdk:
   - openjdk8
+
 branches:
   only:
     - master
 
-# Travis CI Server Home
+# Travis CI 서버의 Home
 cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
-before_install:
-  chmod +x gradlew
 script: "./gradlew clean build"
 
-# Bucket
 before_deploy:
-  - zip -r freelec-springboot2-webservice *
-  - mkdir -p deploy
-  - mv freelec-springboot2-webservice.zip deploy/freelec-springboot2-webservice.zip
+  - mkdir -p before-deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy * # before-deploy로 이동후 전체 압축
+  - cd ../ && mkdir -p deploy # 상위 디렉토리로 이동후 deploy 디렉토리 생성
+  - mv before-deploy/before-deploy.zip deploy/freelec-springboot2-webservice.zip # deploy로 zip파일 이동
 
 deploy:
-#s3
   - provider: s3
-    access_key_id: $AWS_ACCESS_KEY # Travis repo setting
-    secret_access_key: $AWS_SECRET_KEY # Travis repo setting
-    bucket: mybucket-springboot-build
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: mybucket-springboot-build # S3 버킷
     region: ap-northeast-2
     skip_cleanup: true
-    acl: private
-    local_dir: deploy
+    acl: private # zip 파일 접근을 private으로
+    local_dir: deploy # before_deploy에서 생성한 디렉토리
     wait-until-deployed: true
 
-#codedploy
   - provider: codedeploy
-    access_key_id: $AWS_ACCESS_KEY # Travis repo setting
-    secret_access_key: $AWS_SECRET_KEY # Travis repo setting
-    bucket: mybucket-springboot-build
-    key: freelec-springboot2-webservice.zip
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: mybucket-springboot-build # S3 버킷
+    key: freelec-springboot2-webservice.zip # 빌드 파일을 압축해서 전달
     bundle_type: zip
-    application: myservice-codedeploy
-    deployment_group: mycodedeploy
+    application: freelec-springboot2-webservice # 웹 콘솔에서 등록한 CodeDeploy 어플리케이션
+    deployment_group: mycodedeploy # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
     region: ap-northeast-2
     wait-until-deployed: true
 
-
-
-# CI complete
+# CI 실행 완료시 메일로 알람
 notifications:
   email:
     recipients:
